# polygons

./: CMakeLists.txt  Dockerfile  README.md
assets/: coco.names  polygons.json
proto/: exchange_protocol.proto
src/: client.cpp  idetector.h  polygon_processor.h  server.cpp  yolo_detector.cpp  yolo_detector.h
tests/: CMakeLists.txt  test_polygon_processor.cpp  test_yolo_detector.cpp
